@@ -1,6 +1,7 @@
 [B]2.0.3[/B]
 • Fix color with lyrics
-• Fix banner on music visualisation
+• Fix banner on music fullscreen
+• Fix music visualisation
 • Fix esthetic appearance
 
 [B]2.0.2[/B]
